hacking around with sammy - trying to get views to work

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,14 @@ work reliably</p></section>
   <section id="output">
   </section>
 </section>
+<section id="views" style="display:none;">
+    <section class="main">
+        <p><strong><%= item.title %></strong>
+        <p><%= item.body %></p>
+    </section>
+</section>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script src="javascript/sammy-0.6.1.min.js"></script>
+<script src="javascript/sammy.js"></script>
   <script src="javascript/lcwa.js"></script>
     </body>
 </html>
