still struggling with views

--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,15 @@ work reliably</p></section>
   </section>
 </section>
 <section id="views" style="display:none;">
-    <section class="main">
-        <p><strong><%= item.title %></strong>
-        <p><%= item.body %></p>
+    <section class="main" data-engine="template">
+<![CDATA[        <p><strong><%=title%></strong>
+        <p><%=body%><%=5%></p>
+]]>
     </section>
 </section>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script src="javascript/sammy.js"></script>
+<script src="javascript/sammy.template.js"></script>
   <script src="javascript/lcwa.js"></script>
     </body>
 </html>
