trivial view template working sortof

--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,10 @@ work reliably</p></section>
 </section>
 <section id="views" style="display:none;">
     <section class="main" data-engine="template">
-<![CDATA[        <p><strong><%=title%></strong>
+<script type="text/html" id="test" data-engine="template">
+    <p><strong><%=title%></strong>
         <p><%=body%><%=5%></p>
-]]>
+</script>
     </section>
 </section>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
