cleaned up structure a bit - better names, scope for multiple contexts, removed guff

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,11 @@ work reliably</p></section>
   <header>
     <h1>Loosely Coupled Web App Sample</h1>
   </header>
-  <section id="output">
+  <section id="items">
+      <p>(no items loaded yet...)</p>
   </section>
 </section>
+<!-- ----------------------- templates, javascript, and the like ----------------- -->
 <script type="text/html" id="all-view" data-engine="mustache">
   <ul>
     {{#items}}
