interim checkin - started migrating away from sammy

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@ work reliably</p></section>
   <ul>
     {{#items}}
     <li>
-      <p><a href="#/items/{{index}}"<strong>{{title}}</strong></a></p>
+      <p><a href="#/items/{{index}}"><strong>{{title}}</strong></a></p>
       <p>{{body}}</p>
     </li>
     {{/items}}
@@ -42,9 +42,11 @@ work reliably</p></section>
   <p>{{body}}</p>
   <p><a href="#/">(back to list)</a></p>
 </script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script src="javascript/sammy.js"></script>
-<script src="javascript/sammy.mustache.js"></script>
-  <script src="javascript/lcwa.js"></script>
-    </body>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> -->
+<script src="javascript/jquery-1.4.2.js"></script>
+<script src="javascript/ba-debug.js"></script>
+<script src="javascript/jquery.ba-bbq.js"></script>
+<script src="javascript/mustache.js"></script>
+<script src="javascript/lcwa.js"></script>
+</body>
 </html>
