added raphaeljs, with pretty load icon as a sample

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@ work reliably</p></section>
 <h1>Warning!</h1><p>This site will not render correctly on Internet Explorer 7 or older</p>
 </div>
 <![endif]-->
+<section id="working" style="display:none"></section>
 <section class="main">
   <header>
     <h1>Loosely Coupled Web App Sample</h1>
@@ -40,6 +41,7 @@ work reliably</p></section>
   {{#sprockets}}
     <li>{{name}} - size {{size}}</li>
   {{/sprockets}}
+  </ul>
   <p><a href="#" data-link="{{linkParam}}">(back to list)</a></p>
 </script>
 <script type="text/html" id="loading-view">
@@ -55,6 +57,7 @@ work reliably</p></section>
 <script src="javascript/ba-debug.js"></script>
 <script src="javascript/jquery.ba-bbq.js"></script>
 <script src="javascript/mustache.js"></script>
+<script src="javascript/raphael-min.js"></script>
 <script src="javascript/lcwa.js"></script>
 </body>
 </html>
