fixes to ajax wait icon

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@ work reliably</p></section>
 <h1>Warning!</h1><p>This site will not render correctly on Internet Explorer 7 or older</p>
 </div>
 <![endif]-->
-<section id="working" style="display:none"></section>
+<section id="ajax-status"></section>
 <section class="main">
   <header>
     <h1>Loosely Coupled Web App Sample</h1>
